# COOP-UAV-S

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_REVIEW.md  ICD_RUNTIME.md  MARL.md  ORDERING.md  PERF_P4_SITL.md  PLAN_PROBLEM1.md  RESEARCH.md  ROADMAP.md  SRS-COOP-UAV-S-001.md  SRS.md  TRACEABILITY.md
docs/reports/: rng_rebaseline.md  rng_rebaseline_after.json  rng_rebaseline_before.json
notebooks/: train_colab.ipynb
scenarios/: high_diver_raid.yaml  residential_raid.yaml  saturation_raid.yaml  urban_raid.yaml
scripts/: build_deck.py  build_report.py  eval_policy.py  export_supervisor_dataset.py  mc_report.py  record_golden.py  report_figures.py  train_marl.py  ws_smoke.py
scripts/oracle/: export_ardupilot_square.py  export_rotorpy.py
src/coopuavs/: __init__.py  cli.py
src/coopuavs/c2/: assignment.py  base_station.py  learned_allocator.py  orchestrator.py  roe.py  supervisor.py  supervisor_dataset.py  threat_evaluation.py
src/coopuavs/coopfc/: __init__.py  battery_monitor.py  fcu.py  params.py  sched.py  soc.py
src/coopuavs/core/: bus.py  comms.py  messages.py  node.py  ports.py  rng.py
src/coopuavs/hw/: __init__.py  baro.py  esc_telem.py  gps.py  imu.py  mag.py  params.py  seeker_gimbal.py  stoch.py
src/coopuavs/interceptors/: airframe.py  cooperation.py  effectors.py  guidance.py  patrol.py  sentinel.py  uav.py
src/coopuavs/mc/: __init__.py  apollonius.py  cooperation.py  fcu_client.py  fire_control.py  guidance.py  interceptor_app.py  patrol.py  sentinel_app.py
src/coopuavs/perception/: classification.py  fusion.py  tracking.py
src/coopuavs/physics/: __init__.py  atmosphere.py  battery.py  collision.py  dryden.py  fixedwing.py  motor.py  multirotor.py  params.py  powertrain.py  rigid_body.py
src/coopuavs/risk/: debris.py  zones.py
src/coopuavs/rl/: __init__.py  env.py  evaluate.py  mappo.py  models.py  reconcile.py  spaces.py  vec_env.py
src/coopuavs/sensors/: acoustic.py  airborne_radar.py  base.py  eo_ir.py  radar.py  rf.py  seeker.py
src/coopuavs/sil/: __init__.py  bench.py  clock.py  fleet.py  host.py  vehicle.py
src/coopuavs/sim/: adjudicator.py  citygen.py  debris_objects.py  environment.py  evaluation.py  occlusion.py  physics.py  runctl.py  scenario.py  turret.py  weather.py  world.py
tests/: allan_util.py  golden_util.py  test_airborne_radar.py  test_airframe.py  test_apollonius.py  test_assignment.py  test_atmosphere_dryden.py  test_attribution.py  test_blocked_los.py  test_cap_sentinel.py  test_characterization.py  test_citygen.py  test_clearance_binding.py  test_collision.py  test_comms.py  test_coopfc_alignment.py  test_coopfc_bench.py  test_coopfc_cbit.py  test_coopfc_cbit_actions.py  test_coopfc_cbit_monitors.py  test_coopfc_control.py  test_coopfc_drivers.py  test_coopfc_ekf.py  test_coopfc_ekf_mc.py  test_coopfc_fcu.py  test_coopfc_fence.py  test_coopfc_link.py  test_coopfc_params.py  test_coopfc_sched.py  test_coopfc_soc.py  test_coopfc_topics.py  test_coopfc_vec.py  test_debris_live.py  test_end_to_end.py  test_energy_rearm.py  test_evaluation.py  test_fidelity_flags.py  test_fixedwing.py  test_fusion.py  test_fusion_rates.py  (+57 more)
(+58 files in other folders)
