[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coopuavs"
version = "0.1.0"
description = "Cooperative autonomous UAV system for counter-drone defence in populated areas (simulation framework)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["websockets>=12.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
coopuavs = "coopuavs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
