[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coopuavs"
version = "0.1.0"
description = "Cooperative autonomous UAV system for counter-drone defence in populated areas (simulation framework)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = ["websockets>=14.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
coopuavs = "coopuavs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The dashboard frontend ships inside the package: without this, wheel and
# sdist installs lack viz/web and `coopuavs serve` has nothing to serve.
"coopuavs.viz" = ["web/*"]
# Airframe parameter files ship with the physics core (P1).
"coopuavs.physics" = ["params/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run stays fast: opt into the heavy suites with e.g. `pytest -m slow`.
addopts = '--strict-markers -m "not slow and not perf and not oracle"'
markers = [
    "slow: long-running statistical suites (Monte-Carlo, Allan variance, NEES/NIS)",
    "perf: performance benchmarks with CPU-time/RTF gates",
    "oracle: comparisons against committed offline oracle traces (RotorPy, ArduPilot SITL)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
